using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class TRO_Animations {
	public static readonly string MARCHER = "marcher";
	public static readonly string CHERCHER = "chercher";
	public static readonly string ETRE_BLESSE = "etreBlesse";
	public static readonly string MOURIR = "mourir";
	public static readonly string COMBATTRE = "combattre";
	public static readonly string GARDER = "garder";
	public static readonly string ATTAQUER_VERTICALEMENT = "attaquerVerticalement";
	public static readonly string ENDORMIR = "endormissement";
	public static readonly string REVEIL = "reveil";
}
